# multifolio

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0a1b2c3d4e5f_add_facet_analysis.py  4cb2bcd314b3_add_domain_models.py  4cb2bcd314b4_fix_facet_models.py  4e74901105db_add_domain_models.py  5a1b2c3d4e5f_add_themes_and_facet_theme_config.py  6b3c4d5e6f7a_add_section_order.py  7c4d5e6f7a8b_add_social_auth_fields.py  7c8d9e0f1a2b_add_open_to_roles.py  8d5e6f7a8b9c_add_facet_events.py  8e9f0a1b2c3d_add_github_repos.py  9e0f1a2b3c4d_add_comments_and_review_links.py  9f0a1b2c3d4e_add_notifications.py  9f0a1b2c3d4e_add_story_sections.py  a1b2c3d4e5f6_add_review_link_security.py
backend/src/app/: main.py
backend/src/app/commands/: seed_admin.py
backend/tests/: conftest.py  test_ai_story.py  test_auth.py  test_auth_edge.py  test_collaboration.py  test_comment_service_unit.py  test_coverage.py  test_coverage_boost.py  test_facets.py  test_github.py  test_github_import.py  test_health.py  test_job_fit.py  test_llm_client.py  test_media.py  test_notifications.py  test_notifications_api.py  test_open_to_role_service.py  test_profile.py  test_projects.py  test_referrer_analyzer.py  test_review_edge.py  test_review_link_service.py  test_review_links.py  test_seo.py  test_stories.py  test_story_review.py  test_story_service.py  test_sync_coverage.py  test_themes.py  test_upload.py
(+256 files in other folders)
